fixed spacing

--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -31,22 +31,18 @@ h1, p{
 
 .btn{
 	width: 250px;
-	background: #486255;
+	background: black;
 	height: 50px;
 	line-height: 50px;
 	text-align: center;
 	border-radius: 5px;
 	margin: 0 auto;
-	color: #fff;
+	color: white;
 	text-transform: uppercase;
 	cursor: pointer;
 }
 
 .input:focus,
 .msg .area:focus{
-	border: 2px solid #486255;
-}
-
-::-webkit-input-placeholder{
-	font-family: Georgia, serif;
+	border: 2px solid black;
 }
